--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
 <head> 
-    <title>Getting Started: Serving Web Content</title> 
+    <title>Springboot　Training</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="Hellothymeleaf" />
+	<h1 align="center">Springboot　Training</h1>
+	<div align="center">
+    	<a th:href="@{/login/top}" >次へ</a>	<!-- @{/***}を使用するとコンテキストパスを補完してくれる -->
+	</div>
 </body>
 </html>
