--- a/demo/src/main/resources/templates/myPage.html
+++ b/demo/src/main/resources/templates/myPage.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1 align="center">マイページ</h1>
-<h2 align="center"></h2>
+<h2 align="center"><p th:text="'ようこそ！' + ${mypageInfo.userName} +'さん' + '(ユーザーID: ' + ${mypageInfo.userId} + ')'"/></h2>
 </body>
 </html>
