--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -3,21 +3,28 @@
 <head>
 	<title>ログイン｜Springboot　Training</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 </head>
 
 <body>
 	<h1 align="center">Springboot　Training</h1>
 	<h2 align="center">ログイン画面</h2>
 	<div align="center">
-		<form action="#" th:action="@{/login/loginDo}" th:object="${loginInfo}" method="post">
+		<form th:action="@{/login/loginDo}" th:object="${loginDto}" method="post">
 			<table>
 				<tr>
 					<th>ユーザーID</th>
-					<td><input type="text" th:field = "*{userId}"></td>
+					<td>
+						<input type="text" th:field = "*{userId}">
+						<span th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}" style="color: rgb(255, 0, 0); font-weight: bold;" />
+					</td>
 				</tr>
 				<tr>
 					<th>パスワード</th>
-					<td><input type="text" th:field = "*{userPassword}"></td>
+					<td>
+						<input type="text" th:field = "*{userPassword}">
+						<span th:if="${#fields.hasErrors('userPassword')}" th:errors="*{userPassword}" style="color: rgb(255, 0, 0); font-weight: bold;" />
+					</td>
 				</tr>
 			</table>
 			<input type="submit" value="ログイン">
