--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 				<tr>
 					<th>ユーザーID</th>
 					<td>
-						<input type="text" th:field = "*{userId}">
+						<input name="userId" type="text" th:field = "*{userId}">
 					</td>
 					<td>
 						<span th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}" style="color: rgb(255, 0, 0); font-weight: bold;" />
@@ -24,7 +24,7 @@
 				<tr>
 					<th>パスワード</th>
 					<td>
-						<input type="text" th:field = "*{userPassword}">
+						<input name="userPassword" type="text" th:field = "*{userPassword}">
 					</td>
 					<td>
 						<span th:if="${#fields.hasErrors('userPassword')}" th:errors="*{userPassword}" style="color: rgb(255, 0, 0); font-weight: bold;" />
